# allure-aie-lab

./: .gitignore  READ  README.md
homeworks/: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/: S03-homework.md
homeworks/HW03/EDA-CLI/: README.md  pyproject.toml
homeworks/HW03/EDA-CLI/reports/: report.md
homeworks/HW03/EDA-CLI/reports_example/: report.md  summary.csv
homeworks/HW03/EDA-CLI/src/eda_cli/: cli.py  core.py  viz.py
homeworks/HW03/EDA-CLI/tests/: test_core.py
homeworks/HW04/: S04=homework.md
homeworks/HW04/EDA-CLI/: README.md  pyproject.toml
homeworks/HW04/EDA-CLI/src/eda_cli/: __init__.py  api.py  cli.py
homeworks/HW04/EDA-CLI/tests/: test_core.py
homeworks/HW05/: HW05.ipynb  S05-homework.md
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.csv  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: chunk_examples.csv  rag_examples.csv  retrieval_eval.csv  (+1 more)
homeworks/HW15/: HW15.ipynb
(+4 files in other folders)
