[project]
name = "eda-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Елизавета Кузнецова", email = "kuzallure@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "typer>=0.20.0",
    "unicorn>=2.1.4",
]

[project.scripts]
eda-cli = "eda_cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
